--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
         </g>
     </svg>
     <h1>Coming soon!</h1>
-
+<a href="/links-arun.html">Arun</a>
+<a href="/links-bhavishya.html">Bhavishya</a>
+<a href="/links-bluewings.html">Blue Wings</a>
+<a href="/links-sony.html">Sony Maniradhan</a>
 
     <div style="display:none">
 
