--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
 <a href="/links-bhavishya.html">Bhavishya</a>
 <a href="/links-bluewings.html">Blue Wings</a>
 <a href="/links-sony.html">Sony Maniradhan</a>
-<div style="display:none"><a href="/links-arun.html">Arun</a></div>div>
+<div style="display:none"><a href="/links-arun.html">Arun</a></div>
 </body>
 </html>
