--- a/index.html
+++ b/index.html
@@ -72,5 +72,407 @@
 <a href="/links-bluewings.html">Blue Wings</a>
 <a href="/links-sony.html">Sony Maniradhan</a>
 <div style="display:none"><a href="/links-arun.html">Arun</a></div>
+<div style="display:none">
+    <a href="/bluewings1.html">1</a>
+<a href="/bluewings2.html">2</a>
+<a href="/bluewings3.html">3</a>
+<a href="/bluewings4.html">4</a>
+<a href="/bluewings5.html">5</a>
+<a href="/bluewings6.html">6</a>
+<a href="/bluewings7.html">7</a>
+<a href="/bluewings8.html">8</a>
+<a href="/bluewings9.html">9</a>
+<a href="/bluewings10.html">10</a>
+<a href="/bluewings11.html">11</a>
+<a href="/bluewings12.html">12</a>
+<a href="/bluewings13.html">13</a>
+<a href="/bluewings14.html">14</a>
+<a href="/bluewings15.html">15</a>
+<a href="/bluewings16.html">16</a>
+<a href="/bluewings17.html">17</a>
+<a href="/bluewings18.html">18</a>
+<a href="/bluewings19.html">19</a>
+<a href="/bluewings20.html">20</a>
+<a href="/bluewings21.html">21</a>
+<a href="/bluewings22.html">22</a>
+<a href="/bluewings23.html">23</a>
+<a href="/bluewings24.html">24</a>
+<a href="/bluewings25.html">25</a>
+<a href="/bluewings26.html">26</a>
+<a href="/bluewings27.html">27</a>
+<a href="/bluewings28.html">28</a>
+<a href="/bluewings29.html">29</a>
+<a href="/bluewings30.html">30</a>
+<a href="/bluewings31.html">31</a>
+<a href="/bluewings32.html">32</a>
+<a href="/bluewings33.html">33</a>
+<a href="/bluewings34.html">34</a>
+<a href="/bluewings35.html">35</a>
+<a href="/bluewings36.html">36</a>
+<a href="/bluewings37.html">37</a>
+<a href="/bluewings38.html">38</a>
+<a href="/bluewings39.html">39</a>
+<a href="/bluewings40.html">40</a>
+<a href="/bluewings41.html">41</a>
+<a href="/bluewings42.html">42</a>
+<a href="/bluewings43.html">43</a>
+<a href="/bluewings44.html">44</a>
+<a href="/bluewings45.html">45</a>
+<a href="/bluewings46.html">46</a>
+<a href="/bluewings47.html">47</a>
+<a href="/bluewings48.html">48</a>
+<a href="/bluewings49.html">49</a>
+<a href="/bluewings50.html">50</a>
+<a href="/bluewings51.html">51</a>
+<a href="/bluewings52.html">52</a>
+<a href="/bluewings53.html">53</a>
+<a href="/bluewings54.html">54</a>
+<a href="/bluewings55.html">55</a>
+<a href="/bluewings56.html">56</a>
+<a href="/bluewings57.html">57</a>
+<a href="/bluewings58.html">58</a>
+<a href="/bluewings59.html">59</a>
+<a href="/bluewings60.html">60</a>
+<a href="/bluewings61.html">61</a>
+<a href="/bluewings62.html">62</a>
+<a href="/bluewings63.html">63</a>
+<a href="/bluewings64.html">64</a>
+<a href="/bluewings65.html">65</a>
+<a href="/bluewings66.html">66</a>
+<a href="/bluewings67.html">67</a>
+<a href="/bluewings68.html">68</a>
+<a href="/bluewings69.html">69</a>
+<a href="/bluewings70.html">70</a>
+<a href="/bluewings71.html">71</a>
+<a href="/bluewings72.html">72</a>
+<a href="/bluewings73.html">73</a>
+<a href="/bluewings74.html">74</a>
+<a href="/bluewings75.html">75</a>
+<a href="/bluewings76.html">76</a>
+<a href="/bluewings77.html">77</a>
+<a href="/bluewings78.html">78</a>
+<a href="/bluewings79.html">79</a>
+<a href="/bluewings80.html">80</a>
+<a href="/bluewings81.html">81</a>
+<a href="/bluewings82.html">82</a>
+<a href="/bluewings83.html">83</a>
+<a href="/bluewings84.html">84</a>
+<a href="/bluewings85.html">85</a>
+<a href="/bluewings86.html">86</a>
+<a href="/bluewings87.html">87</a>
+<a href="/bluewings88.html">88</a>
+<a href="/bluewings89.html">89</a>
+<a href="/bluewings90.html">90</a>
+<a href="/bluewings91.html">91</a>
+<a href="/bluewings92.html">92</a>
+<a href="/bluewings93.html">93</a>
+<a href="/bluewings94.html">94</a>
+<a href="/bluewings95.html">95</a>
+<a href="/bluewings96.html">96</a>
+<a href="/bluewings97.html">97</a>
+<a href="/bluewings98.html">98</a>
+<a href="/bluewings99.html">99</a>
+<a href="/bluewings100.html">100</a>
+<a href="/sony1.html">1</a>
+<a href="/sony2.html">2</a>
+<a href="/sony3.html">3</a>
+<a href="/sony4.html">4</a>
+<a href="/sony5.html">5</a>
+<a href="/sony6.html">6</a>
+<a href="/sony7.html">7</a>
+<a href="/sony8.html">8</a>
+<a href="/sony9.html">9</a>
+<a href="/sony10.html">10</a>
+<a href="/sony11.html">11</a>
+<a href="/sony12.html">12</a>
+<a href="/sony13.html">13</a>
+<a href="/sony14.html">14</a>
+<a href="/sony15.html">15</a>
+<a href="/sony16.html">16</a>
+<a href="/sony17.html">17</a>
+<a href="/sony18.html">18</a>
+<a href="/sony19.html">19</a>
+<a href="/sony20.html">20</a>
+<a href="/sony21.html">21</a>
+<a href="/sony22.html">22</a>
+<a href="/sony23.html">23</a>
+<a href="/sony24.html">24</a>
+<a href="/sony25.html">25</a>
+<a href="/sony26.html">26</a>
+<a href="/sony27.html">27</a>
+<a href="/sony28.html">28</a>
+<a href="/sony29.html">29</a>
+<a href="/sony30.html">30</a>
+<a href="/sony31.html">31</a>
+<a href="/sony32.html">32</a>
+<a href="/sony33.html">33</a>
+<a href="/sony34.html">34</a>
+<a href="/sony35.html">35</a>
+<a href="/sony36.html">36</a>
+<a href="/sony37.html">37</a>
+<a href="/sony38.html">38</a>
+<a href="/sony39.html">39</a>
+<a href="/sony40.html">40</a>
+<a href="/sony41.html">41</a>
+<a href="/sony42.html">42</a>
+<a href="/sony43.html">43</a>
+<a href="/sony44.html">44</a>
+<a href="/sony45.html">45</a>
+<a href="/sony46.html">46</a>
+<a href="/sony47.html">47</a>
+<a href="/sony48.html">48</a>
+<a href="/sony49.html">49</a>
+<a href="/sony50.html">50</a>
+<a href="/sony51.html">51</a>
+<a href="/sony52.html">52</a>
+<a href="/sony53.html">53</a>
+<a href="/sony54.html">54</a>
+<a href="/sony55.html">55</a>
+<a href="/sony56.html">56</a>
+<a href="/sony57.html">57</a>
+<a href="/sony58.html">58</a>
+<a href="/sony59.html">59</a>
+<a href="/sony60.html">60</a>
+<a href="/sony61.html">61</a>
+<a href="/sony62.html">62</a>
+<a href="/sony63.html">63</a>
+<a href="/sony64.html">64</a>
+<a href="/sony65.html">65</a>
+<a href="/sony66.html">66</a>
+<a href="/sony67.html">67</a>
+<a href="/sony68.html">68</a>
+<a href="/sony69.html">69</a>
+<a href="/sony70.html">70</a>
+<a href="/sony71.html">71</a>
+<a href="/sony72.html">72</a>
+<a href="/sony73.html">73</a>
+<a href="/sony74.html">74</a>
+<a href="/sony75.html">75</a>
+<a href="/sony76.html">76</a>
+<a href="/sony77.html">77</a>
+<a href="/sony78.html">78</a>
+<a href="/sony79.html">79</a>
+<a href="/sony80.html">80</a>
+<a href="/sony81.html">81</a>
+<a href="/sony82.html">82</a>
+<a href="/sony83.html">83</a>
+<a href="/sony84.html">84</a>
+<a href="/sony85.html">85</a>
+<a href="/sony86.html">86</a>
+<a href="/sony87.html">87</a>
+<a href="/sony88.html">88</a>
+<a href="/sony89.html">89</a>
+<a href="/sony90.html">90</a>
+<a href="/sony91.html">91</a>
+<a href="/sony92.html">92</a>
+<a href="/sony93.html">93</a>
+<a href="/sony94.html">94</a>
+<a href="/sony95.html">95</a>
+<a href="/sony96.html">96</a>
+<a href="/sony97.html">97</a>
+<a href="/sony98.html">98</a>
+<a href="/sony99.html">99</a>
+<a href="/sony100.html">100</a>
+<a href="/bhavishya1.html">1</a>
+<a href="/bhavishya2.html">2</a>
+<a href="/bhavishya3.html">3</a>
+<a href="/bhavishya4.html">4</a>
+<a href="/bhavishya5.html">5</a>
+<a href="/bhavishya6.html">6</a>
+<a href="/bhavishya7.html">7</a>
+<a href="/bhavishya8.html">8</a>
+<a href="/bhavishya9.html">9</a>
+<a href="/bhavishya10.html">10</a>
+<a href="/bhavishya11.html">11</a>
+<a href="/bhavishya12.html">12</a>
+<a href="/bhavishya13.html">13</a>
+<a href="/bhavishya14.html">14</a>
+<a href="/bhavishya15.html">15</a>
+<a href="/bhavishya16.html">16</a>
+<a href="/bhavishya17.html">17</a>
+<a href="/bhavishya18.html">18</a>
+<a href="/bhavishya19.html">19</a>
+<a href="/bhavishya20.html">20</a>
+<a href="/bhavishya21.html">21</a>
+<a href="/bhavishya22.html">22</a>
+<a href="/bhavishya23.html">23</a>
+<a href="/bhavishya24.html">24</a>
+<a href="/bhavishya25.html">25</a>
+<a href="/bhavishya26.html">26</a>
+<a href="/bhavishya27.html">27</a>
+<a href="/bhavishya28.html">28</a>
+<a href="/bhavishya29.html">29</a>
+<a href="/bhavishya30.html">30</a>
+<a href="/bhavishya31.html">31</a>
+<a href="/bhavishya32.html">32</a>
+<a href="/bhavishya33.html">33</a>
+<a href="/bhavishya34.html">34</a>
+<a href="/bhavishya35.html">35</a>
+<a href="/bhavishya36.html">36</a>
+<a href="/bhavishya37.html">37</a>
+<a href="/bhavishya38.html">38</a>
+<a href="/bhavishya39.html">39</a>
+<a href="/bhavishya40.html">40</a>
+<a href="/bhavishya41.html">41</a>
+<a href="/bhavishya42.html">42</a>
+<a href="/bhavishya43.html">43</a>
+<a href="/bhavishya44.html">44</a>
+<a href="/bhavishya45.html">45</a>
+<a href="/bhavishya46.html">46</a>
+<a href="/bhavishya47.html">47</a>
+<a href="/bhavishya48.html">48</a>
+<a href="/bhavishya49.html">49</a>
+<a href="/bhavishya50.html">50</a>
+<a href="/bhavishya51.html">51</a>
+<a href="/bhavishya52.html">52</a>
+<a href="/bhavishya53.html">53</a>
+<a href="/bhavishya54.html">54</a>
+<a href="/bhavishya55.html">55</a>
+<a href="/bhavishya56.html">56</a>
+<a href="/bhavishya57.html">57</a>
+<a href="/bhavishya58.html">58</a>
+<a href="/bhavishya59.html">59</a>
+<a href="/bhavishya60.html">60</a>
+<a href="/bhavishya61.html">61</a>
+<a href="/bhavishya62.html">62</a>
+<a href="/bhavishya63.html">63</a>
+<a href="/bhavishya64.html">64</a>
+<a href="/bhavishya65.html">65</a>
+<a href="/bhavishya66.html">66</a>
+<a href="/bhavishya67.html">67</a>
+<a href="/bhavishya68.html">68</a>
+<a href="/bhavishya69.html">69</a>
+<a href="/bhavishya70.html">70</a>
+<a href="/bhavishya71.html">71</a>
+<a href="/bhavishya72.html">72</a>
+<a href="/bhavishya73.html">73</a>
+<a href="/bhavishya74.html">74</a>
+<a href="/bhavishya75.html">75</a>
+<a href="/bhavishya76.html">76</a>
+<a href="/bhavishya77.html">77</a>
+<a href="/bhavishya78.html">78</a>
+<a href="/bhavishya79.html">79</a>
+<a href="/bhavishya80.html">80</a>
+<a href="/bhavishya81.html">81</a>
+<a href="/bhavishya82.html">82</a>
+<a href="/bhavishya83.html">83</a>
+<a href="/bhavishya84.html">84</a>
+<a href="/bhavishya85.html">85</a>
+<a href="/bhavishya86.html">86</a>
+<a href="/bhavishya87.html">87</a>
+<a href="/bhavishya88.html">88</a>
+<a href="/bhavishya89.html">89</a>
+<a href="/bhavishya90.html">90</a>
+<a href="/bhavishya91.html">91</a>
+<a href="/bhavishya92.html">92</a>
+<a href="/bhavishya93.html">93</a>
+<a href="/bhavishya94.html">94</a>
+<a href="/bhavishya95.html">95</a>
+<a href="/bhavishya96.html">96</a>
+<a href="/bhavishya97.html">97</a>
+<a href="/bhavishya98.html">98</a>
+<a href="/bhavishya99.html">99</a>
+<a href="/bhavishya100.html">100</a>
+<a href="/arun1.html">1</a>
+<a href="/arun2.html">2</a>
+<a href="/arun3.html">3</a>
+<a href="/arun4.html">4</a>
+<a href="/arun5.html">5</a>
+<a href="/arun6.html">6</a>
+<a href="/arun7.html">7</a>
+<a href="/arun8.html">8</a>
+<a href="/arun9.html">9</a>
+<a href="/arun10.html">10</a>
+<a href="/arun11.html">11</a>
+<a href="/arun12.html">12</a>
+<a href="/arun13.html">13</a>
+<a href="/arun14.html">14</a>
+<a href="/arun15.html">15</a>
+<a href="/arun16.html">16</a>
+<a href="/arun17.html">17</a>
+<a href="/arun18.html">18</a>
+<a href="/arun19.html">19</a>
+<a href="/arun20.html">20</a>
+<a href="/arun21.html">21</a>
+<a href="/arun22.html">22</a>
+<a href="/arun23.html">23</a>
+<a href="/arun24.html">24</a>
+<a href="/arun25.html">25</a>
+<a href="/arun26.html">26</a>
+<a href="/arun27.html">27</a>
+<a href="/arun28.html">28</a>
+<a href="/arun29.html">29</a>
+<a href="/arun30.html">30</a>
+<a href="/arun31.html">31</a>
+<a href="/arun32.html">32</a>
+<a href="/arun33.html">33</a>
+<a href="/arun34.html">34</a>
+<a href="/arun35.html">35</a>
+<a href="/arun36.html">36</a>
+<a href="/arun37.html">37</a>
+<a href="/arun38.html">38</a>
+<a href="/arun39.html">39</a>
+<a href="/arun40.html">40</a>
+<a href="/arun41.html">41</a>
+<a href="/arun42.html">42</a>
+<a href="/arun43.html">43</a>
+<a href="/arun44.html">44</a>
+<a href="/arun45.html">45</a>
+<a href="/arun46.html">46</a>
+<a href="/arun47.html">47</a>
+<a href="/arun48.html">48</a>
+<a href="/arun49.html">49</a>
+<a href="/arun50.html">50</a>
+<a href="/arun51.html">51</a>
+<a href="/arun52.html">52</a>
+<a href="/arun53.html">53</a>
+<a href="/arun54.html">54</a>
+<a href="/arun55.html">55</a>
+<a href="/arun56.html">56</a>
+<a href="/arun57.html">57</a>
+<a href="/arun58.html">58</a>
+<a href="/arun59.html">59</a>
+<a href="/arun60.html">60</a>
+<a href="/arun61.html">61</a>
+<a href="/arun62.html">62</a>
+<a href="/arun63.html">63</a>
+<a href="/arun64.html">64</a>
+<a href="/arun65.html">65</a>
+<a href="/arun66.html">66</a>
+<a href="/arun67.html">67</a>
+<a href="/arun68.html">68</a>
+<a href="/arun69.html">69</a>
+<a href="/arun70.html">70</a>
+<a href="/arun71.html">71</a>
+<a href="/arun72.html">72</a>
+<a href="/arun73.html">73</a>
+<a href="/arun74.html">74</a>
+<a href="/arun75.html">75</a>
+<a href="/arun76.html">76</a>
+<a href="/arun77.html">77</a>
+<a href="/arun78.html">78</a>
+<a href="/arun79.html">79</a>
+<a href="/arun80.html">80</a>
+<a href="/arun81.html">81</a>
+<a href="/arun82.html">82</a>
+<a href="/arun83.html">83</a>
+<a href="/arun84.html">84</a>
+<a href="/arun85.html">85</a>
+<a href="/arun86.html">86</a>
+<a href="/arun87.html">87</a>
+<a href="/arun88.html">88</a>
+<a href="/arun89.html">89</a>
+<a href="/arun90.html">90</a>
+<a href="/arun91.html">91</a>
+<a href="/arun92.html">92</a>
+<a href="/arun93.html">93</a>
+<a href="/arun94.html">94</a>
+<a href="/arun95.html">95</a>
+<a href="/arun96.html">96</a>
+<a href="/arun97.html">97</a>
+<a href="/arun98.html">98</a>
+<a href="/arun99.html">99</a>
+<a href="/arun100.html">100</a>
+    </div>
 </body>
 </html>
